tests/NormalTests/paczka1/small_fuzzy/24809931.err
Error in line 10: pED S768 23,16
Error in line 3: j0ru S942 22,0
Error in line 12: pED S768 24,1
